--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
+    "build": "npx next build",
     "dev": "npx next dev",
-    "lint": "next lint",
-    "start": "next start"
+    "lint": "npx next lint",
+    "start": "npx next start"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
